src/test/ui/parser/lex-bad-char-literals-2.stderr
error: character literal may only contain one codepoint
  --> $DIR/lex-bad-char-literals-2.rs:3:5
   |
LL |     'nope'
   |     ^^^^^^
help: if you meant to write a `str` literal, use double quotes
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |
LL |     "nope"
   |     ^^^^^^

error[E0601]: `main` function not found in crate `lex_bad_char_literals_2`
=======
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL |     "nope"
   |     ^^^^^^

error: aborting due to previous error

